--- a/api/config/config.json
+++ b/api/config/config.json
@@ -1,11 +1,11 @@
 {
   "development": {
-    "username": "alura",
-    "password": "admin123",
+    "username": "root",
+    "password": "12345678",
     "database": "escola_ingles",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "operatorsAliases": false
+    "operatorsAliases": 0
   },
   "test": {
     "username": "root",
